fixing name in h1 tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dana Cronin</title>
 </head>
 <body>
-    <h1>Dana Croni></h1> 
+    <h1>Dana Cronin</h1> 
     <img src="./images/gallery-icon.png" alt="my-face" srcset="">
 </body>
 </html>
