changing image and adding lorem about me section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dana Cronin</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Dana Cronin</h1> 
-    <img src="./images/gallery-icon.png" alt="my-face" srcset="">
+    <img src="./images/ny-selfy.jpg" alt="my-face">
+    <h2>About Me</h2>
+    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto quidem consequatur mollitia minima. Facere similique non temporibus doloribus quae iste nesciunt voluptas! Laboriosam quos temporibus rem maxime voluptatum? Expedita, iste.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo autem, quo veniam rem adipisci dolores iusto eos! Consectetur quos itaque dolor a voluptatibus. Consectetur vitae quas consequatur ab in saepe!</p>
 </body>
 </html>
