adding nav bar, jumbotron and loading circles from bootstrap as well as updating information

--- a/index.html
+++ b/index.html
@@ -6,12 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dana Cronin</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Dana Cronin</h1> 
-    <img src="./images/ny-selfy.jpg" alt="my-face">
-    <h2>About Me</h2>
-    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto quidem consequatur mollitia minima. Facere similique non temporibus doloribus quae iste nesciunt voluptas! Laboriosam quos temporibus rem maxime voluptatum? Expedita, iste.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo autem, quo veniam rem adipisci dolores iusto eos! Consectetur quos itaque dolor a voluptatibus. Consectetur vitae quas consequatur ab in saepe!</p>
+    <div class="container">
+            
+                  <div class="jumbotron jumbotron-fluid">
+                      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                      <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="#">About Me <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">Portfolio</a>
+                        <a class="nav-item nav-link" href="#">Contact</a>
+                      </div>
+                    </div>
+                  </nav>
+                        <div class="container">
+                          <h1 class="display-4">Dana Cronin</h1>
+                          <img src="./images/ny-selfy.jpg" alt="my-face">
+                          <p class="lead">Originally a Mathematics Major now working with UCF to learn JS, HTML, CSS and tailoring my skills in fields of Computer Programming towards the market's needs.</p>
+                        </div>
+                      </div>
+        
+        <h2>About Me</h2>
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto quidem consequatur mollitia minima. Facere similique non temporibus doloribus quae iste nesciunt voluptas! Laboriosam quos temporibus rem maxime voluptatum? Expedita, iste.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo autem, quo veniam rem adipisci dolores iusto eos! Consectetur quos itaque dolor a voluptatibus. Consectetur vitae quas consequatur ab in saepe!</p>
+        <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-secondary" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-success" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-danger" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-warning" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-info" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-light" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <div class="spinner-border text-dark" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+    </div>
 </body>
 </html>
