--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <title>Dana Cronin</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -33,7 +33,8 @@
         <h1 class="display-4">Dana Cronin</h1>
       </div>
     </div>
-    <div class="container" id="content-center">
+    <div class="container" id="content-center" id="portfolio-list">
+      <div ></div>
       <div class="row">
         <h2 id="portfolio-h2">Portfolio</h2>
       </div>
@@ -65,7 +66,7 @@
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3> -->
-      </div>
+      <!-- </div> -->
     </div>
   </div>
 </body>
