--- a/portfolio.html
+++ b/portfolio.html
@@ -61,11 +61,11 @@
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
+      </div>-->
+      <div class="work"> <a href="https://decronin.github.io/RPS-Multiplayer/" target="_blank"></a>
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3> -->
+        <h3>Rock Paper Scissors</h3> 
       <!-- </div> -->
     </div>
   </div>
