--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       <div class="work"><a href="https://decronin.github.io/unit-4-game/" target="_blank">
         <img src="./images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
-        <h3>RPG Game</h3></a>
+        <h3>ELements Collector Game</h3></a>
       </div>
       <div class="work" > <a href="https://decronin.github.io/TriviaGame/" target="_blank">
         <img src="./images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
@@ -62,10 +62,10 @@
 
         <h3>Rutgers Info Widget</h3>
       </div>-->
-      <div class="work"> <a href="https://decronin.github.io/RPS-Multiplayer/" target="_blank"></a>
+      <div class="work"> <a href="https://decronin.github.io/TrainScheduleCalculator/" target="_blank"></a>
         <img src="./images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3> 
+        <h3>Train Calculator</h3> 
       <!-- </div> -->
     </div>
   </div>
