--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,11 @@
       <div class="row">
         <h2 id="portfolio-h2">Portfolio</h2>
       </div>
+      <div class="work"> <a href="https://decronin.github.io/project-one-ddb/" target="_blank">
+        <img src="./images/food.jpg" alt="Rutgers Info Widget">
+
+        <h3>Empty Kitchen</h3></a>
+      </div>
       <div class="work"><a href="https://decronin.github.io/Word-Guess-Game/" target="_blank">
         <img src="./images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
@@ -57,15 +62,10 @@
         <img src="./images/searching.jpg">
         <h3>Gif Searcher</h3></a>
       </div>
-      <!-- <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>-->
-      <div class="work"> <a href="https://decronin.github.io/TrainScheduleCalculator/" target="_blank"></a>
+      <div class="work"> <a href="https://decronin.github.io/TrainScheduleCalculator/" target="_blank">
         <img src="./images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Train Calculator</h3> 
+        <h3>Train Calculator</h3> </a>
       <!-- </div> -->
     </div>
   </div>
