linking liri-node-app

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,8 +66,11 @@
         <img src="./images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
         <h3>Train Calculator</h3> </a>
-      <!-- </div> -->
-    </div>
+      </div>
+      <div class="work"><a href="https://decronin.github.io/liri-node-app/" target="_blank">
+        <img src="./images/1__BDozShS6r8dDACjRps4Lg.png" alt="node">
+        <h3>Liri-Node</h3>
+      </a></div>
   </div>
 </body>
 
