repo instead of live page link line 70

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 
         <h3>Train Calculator</h3> </a>
       </div>
-      <div class="work"><a href="https://decronin.github.io/liri-node-app/" target="_blank">
+      <div class="work"><a href="https://github.com/DECronin/liri-node-app/blob/master/README.md" target="_blank">
         <img src="./images/1__BDozShS6r8dDACjRps4Lg.png" alt="node">
         <h3>Liri-Node</h3>
       </a></div>
