adding node-hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,11 @@
 
         <h3>ELements Collector Game</h3></a>
       </div>
+      <div class="work"> <a href="https://github.com/DECronin/Node-Hangman" target="_blank">
+        <img src="./images/1_3FTNbYQ3pWzJ1u4XF1Suzw.png" alt="node-words">
+
+        <h3>Hangman w/ Node</h3></a>
+      </div>
       <div class="work" > <a href="https://decronin.github.io/TriviaGame/" target="_blank">
         <img src="./images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
