adding bamazon assignment

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,11 @@
 
         <h3>Hangman w/ Node</h3></a>
       </div>
+      <div class="work"> <a href="https://github.com/DECronin/bamazon" target="_blank">
+        <img src="./images/Amazon-Smile-Squ-f9a6e959-ed0d-466b-920a-e9a214e54c02._CB514185896_.jpg" alt="bamazon">
+
+        <h3>Bamazon</h3></a>
+      </div>
       <div class="work" > <a href="https://decronin.github.io/TriviaGame/" target="_blank">
         <img src="./images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
