updating bio with resume summary

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <div class="container">
         <h1 class="display-4">Dana Cronin</h1>
         <img src="./images/ny-selfy.jpg" alt="my-face" id="bio-pic">
-        <p class="lead">Originally a Mathematics Major now working with UCF to learn JS, HTML, CSS and tailoring my
-          skills in fields of Computer Programming towards the market's needs.</p>
+        <!-- <p class="lead"></p> -->
       </div>
     </div>
     <div class="container" id="content-center">
@@ -41,16 +40,9 @@
         <h2>About Me</h2>
       </div>
       <div>
-        <p> Full-stack web developer with a background in Mathematics, Graphic Design and Account Consultation. Recently
-        graduated a certificate program in Full Stack Development from the University of Central Florida, focused on
-        skills in jQuery, JavaScript, CSS, React.js, and responsive web design to merge with prior skills in Microsoft
-        Office branches, data entry, and Paint Tool SAI. Professional strengths include problem solving, teamwork,
-        adaptability and a drive for learning through market-appropriate out-of-the-box creativity. When faced with the
-        options of the road less traveled or the common easy route I’ve found myself to explore the woods.</p>
-        <p>   I live by and evolved from a counterculture bridging the world of the ‘Normal’ with that of the ‘Unique’ (sometimes Eccentric).
-        Reading between the lines of what we think we know, I aim to be a force challenging myself and my field to
-        anticipate and meet the market’s current and future needs. Everything can be solved, it only takes time, passion,
-        creativity and attention to the details involved to translate or manipulate whichever rules you’re working with.</p>
+        <p>Multidisciplinary full stack web developer with mathematics, graphic design, and business development background. Proficiency in JavaScript, HTML5, CSS, React.js, SQL, Adobe Acrobat Pro DC, Databases, Heroku, Git, Node.js, Cheerio.js, Cypress, Microsoft Office Suite, Graphics Editing Software and responsive libraries.</p>
+        <p>Highly motivated innovative professional experienced in full stack project development, project management and team coordination. Outstanding problem-solving skills with a passion for generating work that exceeds the expectations of the client. Adept from prototype to implementation; ability to comprehensively remain focused on the client’s mission.</p>
+        <p>Positioned well to provide unique perspectives on end-user interactions for websites’ flow and logic by leveraging my expertise in liaison organization communications by applying elasticity to fresh concepts.</p>
       </div>
     </div>
   </div>
