reducins and polishing portfolio items

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,34 +43,20 @@
 
         <h3>Empty Kitchen</h3></a>
       </div>
+      <div class="work"> <a href="https://cypher-text.herokuapp.com/" target="_blank">
+        <img src="./images/firewall-994x400.jpg" alt="cypher-text">
+
+        <h3>Cypher-Text</h3></a>
+      </div>
       <div class="work"><a href="https://decronin.github.io/Word-Guess-Game/" target="_blank">
-        <img src="./images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <img src="./images/1_3FTNbYQ3pWzJ1u4XF1Suzw.png" alt="Word Guess">
 
         <h3>Word Guess</h3></a>
-      </div>
-      <div class="work"><a href="https://decronin.github.io/unit-4-game/" target="_blank">
-        <img src="./images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>ELements Collector Game</h3></a>
-      </div>
-      <div class="work"> <a href="https://github.com/DECronin/Node-Hangman" target="_blank">
-        <img src="./images/1_3FTNbYQ3pWzJ1u4XF1Suzw.png" alt="node-words">
-
-        <h3>Hangman w/ Node</h3></a>
-      </div><div class="work"> <a href="https://radiant-chamber-25251.herokuapp.com/" target="_blank">
-        <img src="./images/hamburger-3184108_960_720.png" alt="burger">
-
-        <h3>Eat-Da-Burger</h3></a>
       </div>
       <div class="work"> <a href="https://github.com/DECronin/bamazon" target="_blank">
         <img src="./images/Amazon-Smile-Squ-f9a6e959-ed0d-466b-920a-e9a214e54c02._CB514185896_.jpg" alt="bamazon">
 
         <h3>Bamazon</h3></a>
-      </div>
-      <div class="work" > <a href="https://decronin.github.io/TriviaGame/" target="_blank">
-        <img src="./images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3></a>
       </div>
       <div class="work"> <a href="https://decronin.github.io/Gif-Searcher/" target="_blank">
         <img src="./images/searching.jpg">
@@ -81,10 +67,6 @@
 
         <h3>Train Calculator</h3> </a>
       </div>
-      <div class="work"><a href="https://github.com/DECronin/liri-node-app/blob/master/README.md" target="_blank">
-        <img src="./images/1__BDozShS6r8dDACjRps4Lg.png" alt="node">
-        <h3>Liri-Node</h3>
-      </a></div>
   </div>
 </body>
 
