content and div identification

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <h2>About Me</h2>
       </div>
-      <div>
+      <div id="bio-text">
         <p>Multidisciplinary full stack web developer with mathematics, graphic design, and business development background. Proficiency in JavaScript, HTML5, CSS, React.js, SQL, Adobe Acrobat Pro DC, Databases, Heroku, Git, Node.js, Cheerio.js, Cypress, Microsoft Office Suite, Graphics Editing Software and responsive libraries.</p>
         <p>Highly motivated innovative professional experienced in full stack project development, project management and team coordination. Outstanding problem-solving skills with a passion for generating work that exceeds the expectations of the client. Adept from prototype to implementation; ability to comprehensively remain focused on the client’s mission.</p>
         <p>Positioned well to provide unique perspectives on end-user interactions for websites’ flow and logic by leveraging my expertise in liaison organization communications by applying elasticity to fresh concepts.</p>
