--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
         <h1 class="display-4">Dana Cronin</h1>
       </div>
     </div>
-    <div class="container" id="content-center" id="portfolio-list">
+    <div class="container portfolio-list" id="content-center">
       <div ></div>
       <div class="row">
         <h2 id="portfolio-h2">Portfolio</h2>
