--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div class="container">
         <h1 class="display-4">Dana Cronin</h1>
         <img src="./images/ny-selfy.jpg" alt="my-face" id="bio-pic">
-        <!-- <p class="lead"></p> -->
+        <p class="lead">"There Are Three Types of People: Those Who Make Things Happen, Those Who Watch Things Happen, and Those Who Wonder What Happened."</p>
+        <p class="quote-source">--Nicholas Murray Butler</p>
       </div>
     </div>
     <div class="container" id="content-center">
