--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="./index.html">About Me</a>
             <a class="nav-item nav-link active" href="./portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="mailto: decronintech@gmailcom">Contact</a>
           </div>
         </div>
       </nav>
