icons, links and pdf resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="./index.html">About Me</a>
-            <a class="nav-item nav-link active" href="./portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="mailto: decronintech@gmailcom">Contact</a>
+            <a class="nav-item nav-link" href="./index.html"><i class="fas fa-user"></i> About Me</a>
+            <a class="nav-item nav-link active" href="./portfolio.html"><i class="fas fa-briefcase"></i> Portfolio<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="files/DanaECronin_Resume.pdf" target="_blank"><i class="far fa-file-pdf"></i> Resume</a>
+            <a class="nav-item nav-link" href="mailto: decronintech@gmailcom"><i class="far fa-envelope"></i></a>
+            <a class="nav-item nav-link" href="https://github.com/DECronin" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="nav-item nav-link" href="https://www.linkedin.com/in/dana-cronin-7623a5130" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </nav>
@@ -39,35 +42,37 @@
         <h2 id="portfolio-h2">Portfolio</h2>
       </div>
       <div class="work"> <a href="https://decronin.github.io/project-one-ddb/" target="_blank">
-        <img src="./images/food.jpg" alt="Rutgers Info Widget">
+        <img src="./files/food.jpg" alt="Rutgers Info Widget">
 
         <h3>Empty Kitchen</h3></a>
       </div>
       <div class="work"> <a href="https://cypher-text.herokuapp.com/" target="_blank">
-        <img src="./images/firewall-994x400.jpg" alt="cypher-text">
+        <img src="./files/firewall-994x400.jpg" alt="cypher-text">
 
         <h3>Cypher-Text</h3></a>
       </div>
       <div class="work"><a href="https://decronin.github.io/Word-Guess-Game/" target="_blank">
-        <img src="./images/1_3FTNbYQ3pWzJ1u4XF1Suzw.png" alt="Word Guess">
+        <img src="./files/1_3FTNbYQ3pWzJ1u4XF1Suzw.png" alt="Word Guess">
 
         <h3>Word Guess</h3></a>
       </div>
       <div class="work"> <a href="https://github.com/DECronin/bamazon" target="_blank">
-        <img src="./images/Amazon-Smile-Squ-f9a6e959-ed0d-466b-920a-e9a214e54c02._CB514185896_.jpg" alt="bamazon">
+        <img src="./files/Amazon-Smile-Squ-f9a6e959-ed0d-466b-920a-e9a214e54c02._CB514185896_.jpg" alt="bamazon">
 
         <h3>Bamazon</h3></a>
       </div>
       <div class="work"> <a href="https://decronin.github.io/Gif-Searcher/" target="_blank">
-        <img src="./images/searching.jpg">
+        <img src="./files/searching.jpg">
         <h3>Gif Searcher</h3></a>
       </div>
       <div class="work"> <a href="https://decronin.github.io/TrainScheduleCalculator/" target="_blank">
-        <img src="./images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="./files/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
         <h3>Train Calculator</h3> </a>
       </div>
   </div>
+  <script src="https://kit.fontawesome.com/95ef3cb346.js"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
