--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="./index.html">About Me <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link" href="mailto: decronintech@gmailcom">Contact</a>
+            <a class="nav-item nav-link active" href="./index.html"><i class="fas fa-user"></i> About Me<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="./portfolio.html"><i class="fas fa-briefcase"></i> Portfolio</a>
+            <a class="nav-item nav-link" href="files/DanaECronin_Resume.pdf" target="_blank"><i class="far fa-file-pdf"></i> Resume</a>
+            <a class="nav-item nav-link" href="mailto: decronintech@gmailcom"><i class="far fa-envelope"></i></a>
+            <a class="nav-item nav-link" href="https://github.com/DECronin" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="nav-item nav-link" href="https://www.linkedin.com/in/dana-cronin-7623a5130" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </nav>
       <div class="container">
         <h1 class="display-4">Dana Cronin</h1>
-        <img src="./images/ny-selfy.jpg" alt="my-face" id="bio-pic">
+        <img src="./files/ny-selfy.jpg" alt="my-face" id="bio-pic">
         <p class="lead">"There Are Three Types of People: Those Who Make Things Happen, Those Who Watch Things Happen, and Those Who Wonder What Happened."</p>
         <p class="quote-source">--Nicholas Murray Butler</p>
       </div>
@@ -47,6 +50,8 @@
       </div>
     </div>
   </div>
+  <script src="https://kit.fontawesome.com/95ef3cb346.js"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
