--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
       </div>
     </div>
   </div>
-  <script src="https://kit.fontawesome.com/95ef3cb346.js"
-  crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/95ef3cb346.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
