trouobleshooting toggle-timeout

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
   </div>
   <script src="https://kit.fontawesome.com/95ef3cb346.js" crossorigin="anonymous"></script>
   <!-- jQuery CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
   <!-- JavaScript Bootstrap CDN -->
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
 </body>
